Images not showing up fixed - case sensitive

--- a/styleindex.css
+++ b/styleindex.css
@@ -161,7 +161,7 @@
                 width: auto;
                 height: 361px;
                 background-color: yellowgreen;
-                background-image: url("./banner.jpg");
+                background-image: url("Banner.jpg");
                 background-repeat: no-repeat;
                 background-size: cover;
 
